tests/builtin_collision_var_allocator_bad.sl
// Verifies top-level var declarations cannot collide with public builtin types.
var MemAllocator int = 1
